Updated maven dependecies, build jar, cap file installer jar